--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.17)
 
 project(SourceRCON)
 
+include(FetchContent)
+
 FetchContent_Declare(
 	mh_stuff
 	GIT_REPOSITORY https://github.com/PazerOP/stuff.git
@@ -11,9 +13,14 @@ if (NOT mh_stuff_POPULATED)
 endif()
 
 add_library(SourceRCON
-	"include/srcon.h"
-	"src/srcon.cpp"
-)
+	"include/srcon/client.h"
+	"src/client.cpp"
+	"include/srcon/async_client.h"
+	"src/async_client.cpp"
+	"src/srcon_internal.h"
+	"src/srcon_internal.cpp"
+ "include/srcon/srcon.h" "src/srcon.cpp")
+
 target_link_libraries(SourceRCON PRIVATE mh_stuff)
 
 set_property(TARGET SourceRCON PROPERTY CXX_STANDARD 17)
