--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,13 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         buildType: ["Debug", "Release"]
-        buildCompiler: ["g++-9", "clang++-9", "clang++-10"]
+        buildCompiler:
+          - exe: g++-9
+            deps: ""
+          - exe: clang++-9
+            deps: clang-9 libc++-9-dev libc++abi-9-dev
+          - exe: clang++-10
+            deps: "clang-10 libc++-10-dev libc++abi-10-dev"
 
     steps:
     - uses: actions/checkout@v2
@@ -66,11 +72,11 @@ jobs:
         echo "deb http://apt.llvm.org/focal/ llvm-toolchain-focal main" | sudo tee /etc/apt/sources.list.d/llvm.list
         sudo apt update
 
-    - run: sudo apt install ${{ matrix.buildCompiler }}
+    - run: sudo apt install ${{ matrix.buildCompiler.deps }}
 
     - name: run-cmake
       env:
-        CXX: ${{ matrix.buildCompiler }}
+        CXX: ${{ matrix.buildCompiler.exe }}
         CXXFLAGS: -Werror -Wall -Wpedantic -Wextra
       run: |
         mkdir cmake_out
