--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on: [push]
 env:
   VCPKG_BINARY_SOURCES: 'clear;nuget,GitHub,readwrite'
   VCPKG_FEATURE_FLAGS: manifests,binarycaching,registries
+  VCPKG_GIT_REF: c47216ac7904b09187c119c7e4d010dcf993e3d5
 
 jobs:
   build-windows:
@@ -28,6 +29,7 @@ jobs:
     - uses: lukka/run-vcpkg@v7.1
       with:
         setupOnly: true
+        vcpkgGitCommitId: ${{ env.VCPKG_GIT_REF }}
 
     - name: run-cmake
       env:
@@ -80,6 +82,7 @@ jobs:
     - uses: lukka/run-vcpkg@v7.1
       with:
         setupOnly: true
+        vcpkgGitCommitId: ${{ env.VCPKG_GIT_REF }}
 
     - name: Add repos
       run: |
@@ -128,6 +131,7 @@ jobs:
     - uses: lukka/run-vcpkg@v7.1
       with:
         setupOnly: true
+        vcpkgGitCommitId: ${{ env.VCPKG_GIT_REF }}
 
     - name: run-cmake
       env:
