--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: run-cmake
       env:
-        CXXFLAGS: '/WX'
+        CXXFLAGS: //WX
       run: |
         mkdir cmake_out
         cd cmake_out
