--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         buildType: ["Debug", "Release"]
-        buildArch: ["Win32", "x64"]
+        buildArch: ["x86", "x64"]
     steps:
     - uses: actions/checkout@v2
 
@@ -44,13 +44,12 @@ jobs:
     - name: run-cmake
       env:
         CXXFLAGS: //WX
-        CMAKE_TOOLCHAIN_FILE: ${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake
       run: |
         mkdir cmake_out
         cd cmake_out
 
         cmake -G Ninja \
-          -DCMAKE_TOOLCHAIN_FILE="${CMAKE_TOOLCHAIN_FILE}" \
+          -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake" \
           ../
 
         cmake --build . --config ${{ matrix.buildType }}
