--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,6 +117,9 @@ jobs:
 
         cmake --build .
 
+    - name: "[Temp] Print logs of failing fmt dbg build"
+      run: |
+        cat /home/runner/work/SourceRCON/SourceRCON/vcpkg/buildtrees/fmt/install-x64-linux-dbg-out.log
 
 
   build-macos:
