add --debug to linux vcpkg install command to help debug why fmt is failing to upload to github packages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,6 +112,7 @@ jobs:
         cmake -G Ninja \
           -DCMAKE_BUILD_TYPE=${{ matrix.buildType }} \
           -DSourceRCON_WARNINGS_AS_ERRORS=ON \
+          -DVCPKG_INSTALL_OPTIONS=--debug \
           -DCMAKE_TOOLCHAIN_FILE="${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake" \
           ../
 
